--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "antd": "3.3.3",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
