--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm run start-message",
-    "start": "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\" \"npm run lint:watch\"",
+    "start":
+      "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\" \"npm run lint:watch\"",
     "open:src": "babel-node tools/srcServer.js",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools --color",
@@ -22,7 +23,8 @@
     "test": "jest",
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
-    "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "test:cover:CI":
+      "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "jest --watch",
     "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
@@ -31,6 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "3.3.3",
+    "eslint": "4.19.1",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
@@ -62,7 +65,6 @@
     "css-loader": "0.28.7",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
-    "eslint": "4.2.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.3.0",
     "eslint-watch": "3.1.2",
@@ -104,23 +106,16 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/assetsTransformer.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/tools/assetsTransformer.js",
       "\\.(css)$": "<rootDir>/tools/assetsTransformer.js"
     },
-    "setupFiles": [
-      "raf/polyfill",
-      "./tools/enzymeTestAdapterSetup.js"
-    ]
+    "setupFiles": ["raf/polyfill", "./tools/enzymeTestAdapterSetup.js"]
   },
   "babel": {
     "env": {
       "development": {
-        "presets": [
-          "env",
-          "react",
-          "react-hmre",
-          "stage-1"
-        ]
+        "presets": ["env", "react", "react-hmre", "stage-1"]
       },
       "production": {
         "presets": [
@@ -145,25 +140,14 @@
         ]
       },
       "test": {
-        "presets": [
-          "env",
-          "react",
-          "stage-1"
-        ]
+        "presets": ["env", "react", "stage-1"]
       }
     }
   },
   "eslintConfig": {
     "root": true,
-    "extends": [
-      "eslint:recommended",
-      "plugin:import/errors",
-      "plugin:import/warnings",
-      "plugin:react/recommended"
-    ],
-    "plugins": [
-      "react"
-    ],
+    "extends": [],
+    "plugins": ["react"],
     "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 6,
