--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm run start-message",
-    "start": "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\" \"npm run lint:watch\"",
+    "start":
+      "concurrently -k -r -s first \"npm run test:watch\" \"npm run open:src\" \"npm run lint:watch\"",
     "open:src": "babel-node tools/srcServer.js",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools --color",
@@ -22,7 +23,8 @@
     "test": "jest",
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
-    "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "test:cover:CI":
+      "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "jest --watch",
     "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
@@ -32,10 +34,13 @@
   "dependencies": {
     "antd": "3.3.3",
     "eslint": "4.19.1",
+    "google-maps-react": "1.1.11",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-google-maps": "9.4.5",
+    "react-open-weather": "0.3.0",
+    "react-places-autocomplete": "6.1.3",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
@@ -106,23 +111,16 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/assetsTransformer.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/tools/assetsTransformer.js",
       "\\.(css)$": "<rootDir>/tools/assetsTransformer.js"
     },
-    "setupFiles": [
-      "raf/polyfill",
-      "./tools/enzymeTestAdapterSetup.js"
-    ]
+    "setupFiles": ["raf/polyfill", "./tools/enzymeTestAdapterSetup.js"]
   },
   "babel": {
     "env": {
       "development": {
-        "presets": [
-          "env",
-          "react",
-          "react-hmre",
-          "stage-1"
-        ]
+        "presets": ["env", "react", "react-hmre", "stage-1"]
       },
       "production": {
         "presets": [
@@ -147,20 +145,13 @@
         ]
       },
       "test": {
-        "presets": [
-          "env",
-          "react",
-          "stage-1"
-        ]
+        "presets": ["env", "react", "stage-1"]
       }
     }
   },
   "eslintConfig": {
     "root": true,
-    "extends": [],
-    "plugins": [
-      "react"
-    ],
+
     "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 6,
